--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@types/jasminewd2": "2.0.3",
         "@types/node": "12.11.1",
         "@types/object-path": "0.11.0",
+        "angular-cli-ghpages": "^0.6.2",
         "codelyzer": "5.2.2",
         "css-loader": "^3.4.2",
         "jasmine-core": "3.5.0",
